fix: lunatic dynamic table variables (#903)
* test: add integration test for dynamic table

* fix: array variables for lunatic dynamic tables

Plus a bit of refactor and javadoc.

* chore: bump version